smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/mixins-usage-in-implicit-1-0.smithy
// Parse error at line 4, column 19 near ` `: Mixins can only be used with Smithy version 2 or later. Attempted to use mixins with version `1.0`.
namespace smithy.example

structure Foo with [Bar] {}
